crates/nyx-lexer/tests/snapshots/integration_tests__literals__booleans.snap
---
source: crates/nyx-lexer/tests/integration_tests.rs
expression: tokens
---
- Newline
- Let
- Ident: t
- Eq
- "True"
- Newline
- Let
- Ident: f
- Eq
- "False"
- Newline
- Let
- Ident: condition
- Eq
- "True"
- Newline
- Let
- Ident: flag
- Eq
- "False"
- Newline
